--- a/app/main.scss
+++ b/app/main.scss
@@ -1,5 +1,10 @@
 body {
   background: greenyellow;
+  display: flex;
+  color: red;
+  color: blue;
+  border-radius: 10px 5px;
+  transition: 3s;
 }
 
 .redButton {
