--- a/app/main.scss
+++ b/app/main.scss
@@ -1,10 +1,7 @@
 body {
-  background: greenyellow;
+  background: whitesmoke;
   display: flex;
-  color: red;
-  color: blue;
   border-radius: 10px 5px;
-  transition: 3s;
 }
 
 .redButton {
